Upgrade dependencies to latest versions (#41)
* Upgrade dependencies to latest versions

Highlights:
- JDK 17 -> 21
- Micronaut 3.9.0 -> 4.5.3
- no.ks.fiks.maksinporten-client 3.0.1 -> 3.3.1

This change involves a refactoring of the pom.xml adapting to Micronaut 4.

* Use latest maven and jdk 21 for building